# Tycherion

./: .env.example  .gitignore  AGENTS.md  README.md  pj_output.txt  pyproject.toml  requirements.txt  tycherion_guidelines.md  tycherion_observability_flow.mmd
.codex/: config.toml
configs/: demo.yaml
docs/: README.md  observability.md
docs/architecture/: domain-contracts.md  observability.md  overview.md  pipeline.md
docs/concepts/: README.md  domain-glossary.md  glossary.md  operations-glossary.md  risk-sizing-churn.md  trading-mt5-fundamentals.md
docs/diagrams/: observability_flow.mmd  run_loop.mmd  system_overview.mmd
docs/guides/: README.md  observability.md  operations.md  pipeline-tuning.md  quickstart.md  safe-changes-playbook.md  security-secrets.md  troubleshooting.md  tutorial-first-end-to-end-cycle.md
docs/reference/: README.md  config-execution-map.md  configuration.md  critical-invariants.md  development.md  documentation-standards.md  execution-contract.md  plugins.md  ports-contracts.md  testing.md  versioning-and-compatibility.md
docs/reference/observability/: config.md  instrumentation.md
docs/runbooks/: README.md  mt5-connectivity-auth.md  observability.md  order-execution-failures.md
scripts/: check_docs.ps1  run_demo.py
src/tycherion/adapters/mt5/: account_mt5.py  (+4 more)
src/tycherion/app/: main.py
src/tycherion/bootstrap/: main.py
src/tycherion/ports/: account.py  market_data.py  telemetry.py  trading.py  universe.py  watchlist.py
src/tycherion/shared/: config.py  decorators.py  types.py
tests/: test_telemetry.py
(+65 files in other folders)
